# routes/index.js
@@ -2,19 +2,23 @@ const express = require('express');
 const passport = require('passport');
 const router = express.Router();
 
+// Swagger documentation route
 router.use('/', require('./swagger'));
+
+// Contacts API route
 router.use('/contacts', require('./contacts'));
 
-router.get('/login', passport.authenticate('github'), (req, res) =>{});
+// GitHub login route
+router.get('/login', passport.authenticate('github'));
 
-router.get('/logout', function(req, res, next) {
-    req.logout(function(err) {
-        if(err) {return next (err);}
-        res.redirect('/');
-
-    });
-
+// Logout route
+router.get('/logout', (req, res, next) => {
+  req.logout(err => {
+    if (err) return next(err);
+    res.redirect('/');
+  });
 });
 
-
 module.exports = router;
+
+
